# fileAsImg

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  VSAsposeSlidesManager.cpp  VSAsposeSlidesManager.h  VSExportFileAsImages.h  VSIExporterAsImages.h  VSIInterruptible.cpp  VSIInterruptible.h  VSIPreviewGenerator.h  VSNamespace.h  VSQtPdfManager.cpp  VSQtPdfManager.h  VSUtils.h  main.cpp
